[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[replace]
"https://github.com/servo/webrender#0.36.0" = { path = '/home/mortimer/Projects/webrender/webrender' }
"https://github.com/servo/webrender#webrender_traits:0.36.0" = { path = '/home/mortimer/Projects/webrender/webrender_traits' }
